--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@layer components {
+  .p-container {
+    @apply px-5 py-5;
+  }
+  .p-item {
+    @apply px-5 py-3;
+  }
+}
